[gd_scene load_steps=24 format=2]

[ext_resource path="res://SourceCode/RoundController.gd" type="Script" id=1]
[ext_resource path="res://SourceCode/Photo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/font_40.tres" type="DynamicFont" id=3]
[ext_resource path="res://SourceCode/Clues.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/ComputerBackground.png" type="Texture" id=5]
[ext_resource path="res://Assets/font_100.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/Lose.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Win.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Click.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/3.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/2.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/1.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/5.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/7.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/4.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/6.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/font_80.tres" type="DynamicFont" id=17]
[ext_resource path="res://Assets/Menu.png" type="Texture" id=18]
[ext_resource path="res://Assets/Left.png" type="Texture" id=19]
[ext_resource path="res://Assets/Right.png" type="Texture" id=20]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=21]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Clues:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 420, 1300 ), Vector2( 420, 1280 ), Vector2( 420, 1300 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "hint"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Hints:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hints:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 8, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Hints")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 10 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hints/Left:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 260, 60 ), Vector2( 220, 60 ), Vector2( 260, 60 ), Vector2( 220, 60 ), Vector2( 260, 60 ), Vector2( 220, 60 ), Vector2( 260, 60 ), Vector2( 220, 60 ), Vector2( 260, 60 ), Vector2( 220, 60 ), Vector2( 260, 60 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hints/Right:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 820, 60 ), Vector2( 870, 60 ), Vector2( 820, 60 ), Vector2( 870, 60 ), Vector2( 820, 60 ), Vector2( 870, 60 ), Vector2( 820, 60 ), Vector2( 870, 60 ), Vector2( 820, 60 ), Vector2( 870, 60 ), Vector2( 820, 60 ) ]
}

[node name="RoundController" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1080.0
margin_bottom = 1920.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen" type="ColorRect" parent="."]
margin_left = 112.0
margin_top = 191.0
margin_right = 971.0
margin_bottom = 809.0
mouse_filter = 2
color = Color( 0.133333, 0.72549, 0.764706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" parent="." instance=ExtResource( 2 )]
position = Vector2( 684.653, 531.909 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 540, 960 )
current = true

[node name="Tween" type="Tween" parent="."]

[node name="TimeTitle" type="Label" parent="."]
margin_left = 150.0
margin_top = 230.0
margin_right = 485.0
margin_bottom = 290.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.176471, 0.176471, 0.176471, 1 )
text = "Time left"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeScore" type="Label" parent="."]
margin_left = 150.0
margin_top = 250.0
margin_right = 485.0
margin_bottom = 399.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.176471, 0.176471, 0.176471, 1 )
text = "10 s"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTitle" type="Label" parent="."]
margin_left = 150.0
margin_top = 410.0
margin_right = 480.0
margin_bottom = 470.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.176471, 0.176471, 0.176471, 1 )
text = "Score"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 150.0
margin_top = 430.0
margin_right = 485.0
margin_bottom = 579.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.176471, 0.176471, 0.176471, 1 )
text = "123456"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreTitle" type="Label" parent="."]
margin_left = 150.0
margin_top = 600.0
margin_right = 485.0
margin_bottom = 660.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.176471, 0.176471, 0.176471, 1 )
text = "Highscore"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscore" type="Label" parent="."]
margin_left = 150.0
margin_top = 621.0
margin_right = 480.0
margin_bottom = 770.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.176471, 0.176471, 0.176471, 1 )
text = "123456"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultMessage" type="Label" parent="."]
margin_left = 150.0
margin_top = 229.0
margin_right = 910.0
margin_bottom = 770.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.176471, 0.176471, 0.176471, 1 )
text = "
"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerSwipe" type="Timer" parent="."]
one_shot = true

[node name="TimerResult" type="Timer" parent="."]
one_shot = true

[node name="TimerLose" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerDeadline" type="Timer" parent="."]
one_shot = true

[node name="Clues" parent="." instance=ExtResource( 4 )]
position = Vector2( 420, 1300 )
rotation = -0.174533
scale = Vector2( 0.9, 0.9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )

[node name="AnimationPlayerHint" type="AnimationPlayer" parent="."]
autoplay = "hint"
anims/hint = SubResource( 2 )

[node name="Lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="S1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="S2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="S3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="S4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="S5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="S6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="S7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="Hints" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 10.0
margin_right = 1080.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 3 )
text = "Swipe left to see next suspect
Swipe right to detain a suspect"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Sprite" parent="Hints"]
position = Vector2( 220, 60 )
texture = ExtResource( 19 )

[node name="Right" type="Sprite" parent="Hints"]
position = Vector2( 870, 60 )
texture = ExtResource( 20 )

[node name="Menu" type="TextureButton" parent="."]
margin_right = 12.0
margin_bottom = 20.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Admob" type="Node" parent="."]
script = ExtResource( 21 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-7971246227051167/1606174335"
child_directed = true
is_personalized = false
[connection signal="timeout" from="TimerResult" to="." method="_on_TimerResult_timeout"]
[connection signal="timeout" from="TimerDeadline" to="." method="_on_TimerDeadline_timeout"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
